@@ -1,3 +1,7 @@
+2010-03-16  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* src/multistresstest.c: new harnass for multithreaded testing.
+
 2010-03-03  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* src/*: fix a variety of warnings when -Wall is used.  Mostly 
